fix: fix picks management e2e tests (#11)
* chkpt

* chore: fix to data table and unit integration test

* chore: update backend admin games create

* chore: checkpoint for e2e admin test fixes

* chore: fix admin-games.spec.ts

* chore: format frontend

* chore: fix profile page build errors

* feat: add tests for admin users page

* fix: add simple backend gorm validation

* fix: fix all admin-picks e2e tests

* chore: fix e2e tests
